kubernetes/apps/qdrant/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: qdrant
  labels:
    pod-security.kubernetes.io/enforce: restricted
